# sj-trading-demo

./: .env  README.md  pyproject.toml  quote_manager_usage.ipynb
src/sj_trading/: __init__.py  quote.py  testing_flow.py
